# poseidon

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  KICKSTART.MD  KICKSTART.md  LICENSE  README.md  STYLEGUIDE.md  channel.md
cmake/: msquic-config.cmake
docs/superpowers/plans/: 2026-04-20-quasar-message-id.md  2026-04-21-channel-abstraction-phase1.md  2026-04-21-quasar-algorithm2.md  2026-04-22-client-apis-phase1.md  2026-04-22-client-apis-phase2.md  2026-04-22-client-apis-phase3.md  2026-04-22-client-apis-phase4.md  2026-04-22-client-apis-phase5.md  2026-04-22-client-apis-phase6.md  2026-04-22-client-apis-phase7.md  2026-04-22-client-apis-phase8.md
docs/superpowers/specs/: 2026-04-19-nat-traversal-design.md  2026-04-19-quasar-elastic-bloom-design.md  2026-04-20-quasar-message-id-design.md  2026-04-22-client-apis-design.md
include/poseidon/: poseidon_atomic_compat.h  poseidon_channel_config.h  poseidon_client.h  poseidon_key_pair.h  poseidon_refcounter.h
src/: poseidond.c  relay_main.c
src/Bloom/: attenuated_bloom_filter.c  attenuated_bloom_filter.h  bitset.c  bitset.h  bloom_filter.c  bloom_filter.h  elastic_bloom_filter.c  elastic_bloom_filter.h
src/Buffer/: buffer.c  buffer.h
src/Channel/: channel.c  channel.h  channel_config.h  channel_config_defaults.c  channel_manager.c  channel_manager.h  channel_message.c  channel_message.h  channel_notice.c  channel_notice.h  subtopic.c  subtopic.h  topic_alias.c  topic_alias.h  topic_id.c  topic_id.h
src/ClientAPIs/: client_protocol.c  client_protocol.h  client_session.c  client_session.h  transport.h  transport_binder.c  transport_quic.c  transport_tcp.c  transport_unix.c  transport_webtransport.c  transport_ws.c  transport_xpc.c
src/ClientLibs/android/: PoseidonClient.kt  PoseidonClientJava.kt  PoseidonConnection.kt  README.md  build.gradle.kts
src/ClientLibs/android/src/main/aidl/com/poseidon/client/: IPoseidonCallback.aidl  IPoseidonService.aidl
src/ClientLibs/android/src/main/java/com/poseidon/client/: PoseidonClient.kt  PoseidonConnection.kt
src/ClientLibs/c/: CMakeLists.txt  README.md  poseidon_client.c  poseidon_client.h
src/ClientLibs/c/cmake/: PoseidonClientConfig.cmake.in
src/ClientLibs/node/: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
src/ClientLibs/node/src/: types.js
src/ClientLibs/node/src/native/: index.js
src/ClientLibs/node/src/native/addon/: poseidon_addon.cpp  poseidon_addon.h
src/ClientLibs/node/src/web/: client.js  connection.js  index.js  protocol.js
src/ClientLibs/node/src/web/transports/: base.js  index.js  node-net.js  websocket.js  webtransport.js
src/ClientLibs/node/test/web/: client.test.js  connection.test.js  protocol.test.js  types.test.js
src/ClientLibs/python/: README.md  pyproject.toml
src/ClientLibs/python/poseidon_client/: __init__.py  _client.py  _errors.py  _ffi.py
src/ClientLibs/python/tests/: test_client.py
src/ClientLibs/swift/: Package.swift  README.md
src/ClientLibs/swift/Sources/PoseidonClient/: PoseidonClient.swift  PoseidonClientObjC.swift  PoseidonConnection.swift
src/ClientLibs/swift/Tests/PoseidonClientTests/: PoseidonClientTests.swift
src/Crypto/: blake3_wrapper.c  blake3_wrapper.h  key_pair.c  key_pair.h  node_id.c  node_id.h
src/Network/Meridian/: README.md  meridian.c  meridian.h  meridian_conn.c  meridian_conn.h  meridian_gossip.c  meridian_gossip.h  meridian_measure.c  meridian_measure.h  meridian_packet.c  meridian_packet.h  meridian_protocol.c  meridian_protocol.h  meridian_query.c  meridian_query.h  meridian_relay.c  meridian_relay.h  meridian_relay_server.c  meridian_relay_server.h  meridian_rendv.c  meridian_rendv.h  meridian_ring.c  meridian_ring.h  msquic_singleton.c  msquic_singleton.h
src/Network/Meridian/relay/: CMakeLists.txt  README.md
src/Network/Quasar/: README.md  quasar.c  quasar.h  quasar_message_id.c  quasar_message_id.h  quasar_route.c  quasar_route.h
src/RefCounter/: refcounter.c  refcounter.h
src/Time/: debouncer.c  debouncer.h  ticker.c  ticker.h  wheel.c  wheel.h
src/Util/: allocator.c  allocator.h  atomic_compat.h  base58.c  base58.h  endian.h  fs_block_size.c  fs_block_size.h  get_dir.c  get_dir.h  hash.c  hash.h  log.h  memory_pool.c  memory_pool.h  mkdir_p.c  mkdir_p.h  path_join.c  path_join.h  perf_counters.c  perf_counters.h  portable_endian.h  rm_rf.c  rm_rf.h  threadding.c  threadding.h  vec.c
src/WaveClient/: README.md  pubspec.yaml
src/WaveClient/lib/: main.dart
src/WaveClient/lib/src/models/: contact.dart  email.dart  topic.dart
src/WaveClient/lib/src/theme/: app_theme.dart
src/WaveClient/lib/src/widgets/: email_card.dart
src/WaveClient/test/: widget_test.dart
src/Workers/: error.c  error.h  join.c  join.h  pool.c  pool.h  promise.c  promise.h  queue.c  queue.h  transaction_id.c  transaction_id.h  work.c  work.h
src/client_libs/c/: poseidon_client.c  poseidon_client.h
tests/: attenuated_bloom_filter_test.cpp  bloom_bitset_test.cpp  bloom_filter_test.cpp  channel_bootstrap_test.cpp  channel_notice_test.cpp  channel_test.cpp  client_protocol_test.cpp  client_session_test.cpp  elastic_bloom_filter_test.cpp  meridian_conn_test.cpp  meridian_integration_test.cpp  meridian_measure_test.cpp  meridian_nat_detect_test.cpp  meridian_node_test.cpp  meridian_packet_test.cpp  meridian_query_test.cpp  meridian_relay_test.cpp  meridian_ring_test.cpp  pki_test.cpp  poseidon_client_test.cpp  quasar_test.cpp  topic_id_test.cpp
