[build-system]
requires = ["setuptools>=68.0", "cffi>=1.16"]
build-backend = "setuptools.build_meta"

[project]
name = "poseidon-client"
version = "0.1.0"
description = "Python bindings for the Poseidon P2P pub/sub client library"
license = {text = "GPL-3.0"}
requires-python = ">=3.9"
dependencies = ["cffi>=1.16"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["poseidon_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]